# neuromem

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  integration.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
docs/benchmarks/: PERFORMANCE.md  RESULTS.md  longmemeval-s-adk-hot-path-split-g3flash-n10.jsonl  longmemeval-s-adk-hot-path-split-g3flash-n10.md  longmemeval-s-adk-hot-path-split-n5.jsonl  longmemeval-s-adk-hot-path-split-n5.md  longmemeval-s-adk-ontology-v2-n5.jsonl  longmemeval-s-adk-ontology-v2-n5.md  longmemeval-s-neuromem-adk-n1.jsonl  longmemeval-s-neuromem-adk-n1.md  longmemeval-s-neuromem-adk-n3.jsonl  longmemeval-s-neuromem-adk-n3.llm_judge.jsonl  longmemeval-s-neuromem-adk-n3.md  longmemeval-s-neuromem-n1-topk20.jsonl  longmemeval-s-neuromem-n1-topk20.md  longmemeval-s-neuromem-n100-g2flash-overnight.jsonl  longmemeval-s-neuromem-n100-g2flash-overnight.md  longmemeval-s-neuromem-n100-g3.1flashlite-workers4.jsonl  longmemeval-s-neuromem-n100-g3.1flashlite-workers4.md  longmemeval-s-neuromem-n100-g3flashpreview-workers4.jsonl  longmemeval-s-neuromem-n100-g3flashpreview-workers4.md  longmemeval-s-neuromem-n20-ontology-v2-final.jsonl  longmemeval-s-neuromem-n20-ontology-v2-final.md  longmemeval-s-neuromem-n20-ontology-v2.jsonl  longmemeval-s-neuromem-n20-topk20.jsonl  longmemeval-s-neuromem-n20-topk20.md  longmemeval-s-neuromem-n200-g2flash-partial17.jsonl  longmemeval-s-neuromem-n3.jsonl  longmemeval-s-neuromem-n3.llm_judge.jsonl  longmemeval-s-neuromem-n3.md  longmemeval-s-neuromem-pertype10-seed42.jsonl  longmemeval-s-neuromem-pertype10-seed42.md  longmemeval-s-null-n3.jsonl  longmemeval-s-null-n3.llm_judge.jsonl  longmemeval-s-null-n3.md  perf-dream-50f9245.json  perf-ingestion-c9dad63.json  perf-render-50f9245.json  perf-retrieval-c9dad63.json  perf-storage-50f9245.json
docs/decisions/: ADR-001-clustering-library-choice.md  ADR-002-lazy-centroid-naming.md  ADR-003-ontology-tree-v2.md  ADR-004-hot-path-ingest-split.md
docs/investigations/: instance3-target-loss.md
specs/001-neuromem-core/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-neuromem-core/checklists/: requirements.md
specs/001-neuromem-core/contracts/: providers.md  public-api.md  storage-adapter.md
specs/003-neuromem-adk/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-neuromem-adk/checklists/: requirements.md
specs/003-neuromem-adk/contracts/: public-api.md
