# Workspace root for the neuromem monorepo.
#
# This file declares uv workspace membership and shared tool config.
# It is NOT a package itself — there is no [project] table. Publishable
# packages live under packages/, each with its own pyproject.toml.
#
# Mandated by Constitution v2.0.0 Additional Constraints — Repository
# Structure. See .specify/memory/constitution.md.

[tool.uv.workspace]
members = ["packages/*"]

# --- Shared formatting & linting (ruff) ---

[tool.ruff]
line-length = 100
target-version = "py310"
# The vendored speckit-git extension package is not our code.
extend-exclude = [".specify/extensions"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "C90",  # mccabe complexity
]
ignore = [
    "E501",   # line length handled by formatter
    "SIM108", # allow if/else over ternary when clearer
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = [
    "B011",   # allow `assert False` in tests
    "SIM117", # allow nested `with` in tests
    "C901",   # test stub classes can be complex (e.g. 13-method ABCs)
]

[tool.ruff.lint.mccabe]
max-complexity = 10

# --- Shared test config (pytest) ---

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = [
    "packages/neuromem-core/tests",
    "packages/neuromem-gemini/tests",
]
markers = [
    # Integration tests that hit a live external API and require a
    # credentials secret. Declared here so --strict-markers doesn't
    # error on `@pytest.mark.integration`. Excluded from the default
    # run via the `-m "not integration"` entry in addopts — opt in
    # with `pytest -m integration --no-cov` to run them explicitly.
    "integration: test requires network access and a live API key (deselect with '-m \"not integration\"')",
]
addopts = [
    "-q",
    "--strict-markers",
    "--strict-config",
    # Default run excludes the integration marker so pre-commit
    # hooks and normal `uv run pytest` invocations never trigger a
    # network call. Opt in with `pytest -m integration --no-cov`.
    "-m",
    "not integration",
    # Coverage gate — see [tool.coverage] below. `--cov` with no value
    # picks up the source list from [tool.coverage.run] and the
    # fail-under threshold from [tool.coverage.report].
    "--cov",
    "--cov-report=term-missing",
]
filterwarnings = [
    "error",
    # numpy and pandas sometimes emit DeprecationWarnings from upstream
    # libraries during import. These are upstream noise, not our bug.
    "ignore::DeprecationWarning:numpy.*",
    "ignore::DeprecationWarning:pandas.*",
]

# --- Coverage gate (T030 / SC-007) ---
#
# SC-007 requires ≥90% line coverage on the four "core" modules —
# `system.py`, `context.py`, `tools.py`, `vectors.py`. The storage
# adapter subtree is intentionally excluded from this gate because most
# of its uncovered lines are `except sqlite3.Error` re-raise branches
# that require process-level faults to trigger. Those paths are
# defensive and don't need unit-test coverage to be correct.
#
# The `fail_under = 90` threshold below is the CI tripwire; pytest will
# exit non-zero if the filtered coverage drops below 90%. Current
# baseline: ~94% (see the term-missing report on every run).

[tool.coverage.run]
source = [
    "packages/neuromem-core/src/neuromem",
]
branch = false

[tool.coverage.report]
include = [
    "*/neuromem/system.py",
    "*/neuromem/context.py",
    "*/neuromem/tools.py",
    "*/neuromem/vectors.py",
]
show_missing = true
fail_under = 90
